<resources>
    <string name="app_name">Rafeeq</string>
    <string name="create">Register</string>
    <string name="hasAccount">Already has an account</string>
    <string name="account_created_successfully">Account Created Successfully...</string>
    <string name="logged_is_successful">Logged in Successfully...</string>
    <string name="error">Error: </string>
    <string name="Login">Login</string>
    <string name="New">New User? Register Now</string>
    <string name="Log_out">Log Out</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="back">back</string>
    <string name="trip_name">Trip Name</string>
    <string name="begin_trip">Begin Trip</string>
    <string name="place_to_start">place to start</string>
    <string name="end_trip">End Trip</string>
    <string name="place_to_end_trip">Place to end Trip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="mune">mune</string>
    <string name="status">Status:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="start_trip">Start Trip</string>
    <string name="bla">blsa</string>
    <string name="Hello">Hello There!</string>
    <string name="start_point">start point</string>
    <string name="end_point">end point</string>
    <string name="start_details">start details</string>
    <string name="calender_image">Calender_image</string>
    <string name="time_image">time image</string>
    <string name="repeating">Repeating</string>
    <string name="trip_type">Trip Type</string>
    <string name="save_add_btn">Add Trip</string>
    <string name="sync">Sync</string>

    <string name="title_activity_menu_items_for_one_element">MenuItemsForOneElement</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="profile">Profile</string>
    <string name="notes">Show All notes</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="delete_note">Delete Note</string>
    <string name="her_you_can_add_your_trip_notes">here You can add your trip notes</string>
    <string name="test">test</string>
    <string name="report">Distance Report</string>
    <string name="distance">Distance</string>
    <string name="maps_api_key">AIzaSyBZ_h90ZRkxM6LD1m-Jrq7XCZSA2zm63XQ</string>
    <string name="title_activity_maps">Map</string>
    <string name="Email">" Email"</string>
    <string name="Password">" Password"</string>
    <string name="othermethod">_____________ use other method _____________</string>
    <string name="fullName">someone full name</string>
    <string name="failedtogetyourdata">Failed to get your data</string>
    <string name="pleaseenteryourEmail">Please enter email</string>
    <string name="pleaseenteryourPassword">Please enter password</string>
    <string name="signedinsucc">Signed In Successfully</string>
    <string name="SignInFailed">Sign In Failed</string>
    <string name="accountfailed">account failed</string>
    <string name="norRegistered">You are not registered please register</string>
    <string name="YourNotes">Your Notes</string>
    <string name="notedeleted">Note Deleted</string>
    <string name="Yourdataisbackedup">Your data is backed up</string>
    <string name="start">Start</string>
    <string name="floatPermission">You need System Alert Window Permission to do this</string>
    <string-array name="repeating_options">
        <item>No Repeated</item>
        <item>Repeated Daily</item>
        <item>Repeated weekly</item>
        <item>Repeated Monthly</item>
    </string-array>
    <string-array name="trip_options">
        <item>One Way Trip</item>
        <item>Rounded Trip</item>
    </string-array>
</resources>