<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MenuItemsForOneElement">

        <TextView
            android:id="@+id/AllNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textColor="#000" />

        <TextView
            android:id="@+id/editTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_trip"
            android:textColor="#000" />

        <TextView
            android:id="@+id/DeleteTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_trip"
            android:textColor="#000" />

        <TextView
            android:id="@+id/CancelTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_trip"
            android:textColor="#000" />
    </LinearLayout>
</layout>

