<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="30dp"
    android:background="@color/white"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/dateTextViewHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeTextViewHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/time"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextViewHistory"
            app:layout_constraintStart_toEndOf="@+id/dateTextViewHistory"
            app:layout_constraintTop_toTopOf="@+id/dateTextViewHistory"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/menueIconHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/mune"
            app:layout_constraintBottom_toBottomOf="@+id/timeTextViewHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timeTextViewHistory"
            app:srcCompat="@drawable/ic_menu" />

        <TextView
            android:id="@+id/TripNameHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/trip_name"
            android:textColor="@color/dark_green"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextViewHistory" />

        <TextView
            android:id="@+id/statusHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintBottom_toBottomOf="@+id/TripNameHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TripNameHistory"
            app:layout_constraintTop_toTopOf="@+id/TripNameHistory"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/fromTrip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TripNameHistory" />


        <TextView
            android:id="@+id/toTrip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromTrip1" />

        <TextView
            android:id="@+id/fromHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/from"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/fromTrip1"
            app:layout_constraintStart_toEndOf="@+id/fromTrip1"
            app:layout_constraintTop_toTopOf="@+id/fromTrip1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/toHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:textColor="@color/black"
            android:text="@string/to"
            app:layout_constraintStart_toEndOf="@+id/toTrip1"
            app:layout_constraintTop_toTopOf="@+id/toTrip1" />

        <ImageView
            android:id="@+id/notesHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusHistory"
            app:srcCompat="@drawable/ic_notes" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>