<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="30dp"
    android:background="@color/white"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/dateTextViewHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeTextViewHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/time"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/dateTextViewHistoryItem"
            app:layout_constraintStart_toEndOf="@+id/dateTextViewHistoryItem"
            app:layout_constraintTop_toTopOf="@+id/dateTextViewHistoryItem"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/menueIconHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/mune"
            app:layout_constraintBottom_toBottomOf="@+id/timeTextViewHistoryItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timeTextViewHistoryItem"
            app:srcCompat="@drawable/ic_menu" />

        <TextView
            android:id="@+id/TripNameHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/trip_name"
            android:textColor="@color/dark_green"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextViewHistoryItem" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TripNameHistoryItem"
            app:layout_constraintVertical_bias="0.26"
            app:layout_constraintEnd_toStartOf="@+id/startButton"
            app:srcCompat="@drawable/ic_start" />

        <TextView
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/start_button"
            android:gravity="center"
            android:text="@string/start_trip"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@id/notesHistoryItem"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/statusHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintBottom_toBottomOf="@+id/TripNameHistoryItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/TripNameHistoryItem"
            app:layout_constraintTop_toTopOf="@+id/TripNameHistoryItem"
            app:layout_constraintVertical_bias="1.0" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#5678"
            app:layout_constraintTop_toBottomOf="@id/statusHistoryItem"
            app:layout_constraintBottom_toTopOf="@id/fromHistoryItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/fromTripItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TripNameHistoryItem" />


        <TextView
            android:id="@+id/fromHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/from"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/fromTripItem1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toEndOf="@+id/fromTripItem1"
            app:layout_constraintTop_toTopOf="@+id/fromTripItem1"
            app:layout_constraintVertical_bias="1.0" />
        <TextView
            android:id="@+id/toTripItem1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:text="@string/to"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fromTripItem1"
            />


        <TextView
            android:id="@+id/toHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="36dp"
            android:text="@string/to"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toEndOf="@+id/toTripItem1"
            app:layout_constraintTop_toTopOf="@+id/toTripItem1"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/notesHistoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startButton"
            app:layout_constraintTop_toBottomOf="@+id/statusHistoryItem"
            app:layout_constraintVertical_bias="0.816"
            app:srcCompat="@drawable/ic_notes" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>