<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NotesControl">

        <androidx.appcompat.widget.Toolbar
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/action_bar_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/noteToolBar">

            <ImageView
                android:id="@+id/backNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/back" />

            <TextView
                android:paddingHorizontal="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/her_you_can_add_your_trip_notes"
            android:textColor="@color/dark_green"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteToolBar" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNotes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/note_item_design" />

        <ImageView
            android:id="@+id/addNote"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/float_button"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/mint_green"
            android:contentDescription="@string/notes" />
    </androidx.constraintlayout.widget.ConstraintLayout>